# kinode-desktop

./: .gitignore  .taurignore  Cargo.toml  README.md  build.rs  entitlements.plist  forge.config.js  index.html  index.js  main.js  package-lock.json  package.json  preload.js  tauri.conf.json
icons/: icon.icns
src/: main.rs
tauri-wrapper/: index.html
