[package]
name = "kinode-desktop"
version = "0.1.1"
description = "Kinode Desktop App"
authors = ["dr-frmr"]
license = "Apache-2.0"
repository = "https://github.com/kinode-dao/kinode-desktop"
default-run = "kinode-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }
reqwest = { version = "0.11", features = ["blocking"] }
zip = "2.1.6"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ "updater", "api-all", "process-command-api"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
